# piqley-plugin-sdk

./: .gitignore  .pre-commit-config.yaml  AI-USAGE.md  CHANGELOG.md  CLA.md  LICENSE  Package.swift  README.md
Skeletons/go/: main.go
Skeletons/node/: piqley-build-manifest.json
Skeletons/python/: pyproject.toml
Skeletons/swift/: Package.swift  README.md  piqley-build-manifest.json  piqley-build.sh
docs/: json-plugin-reference.md
go/: go.mod  piqley_plugin_sdk.go
node/: package.json
node/src/: index.ts
python/: pyproject.toml
python/piqley_plugin_sdk/: __init__.py
schemas/: build-manifest.schema.json  config.schema.json  manifest.schema.json  plugin-input.schema.json  plugin-output.schema.json  stage.schema.json
scripts/: check-changelog.sh  create-plugin.sh
swift/Fingerprinting/: DCT.swift  ImageFingerprint.swift  ImageFingerprinter.swift  PHash.swift  UploadCache.swift
swift/FingerprintingTests/: DCTTests.swift  ImageFingerprintTests.swift  PHashTests.swift  UploadCacheTests.swift
swift/PiqleyBuild/: main.swift
swift/PiqleyPluginSDK/: AnyHookBox.swift  BuildManifest.swift  Errors.swift  ExecutionLog.swift  HookRegistry.swift  IO.swift  Packager.swift  PiqleyPluginSDK.swift  Plugin.swift  Request.swift  Response.swift
swift/Tests/: ConfigBuilderTests.swift  ConfigRegistryTests.swift  ExecutionLogTests.swift  ManifestBuilderTests.swift  MatchFieldTests.swift  MockTests.swift  PackagerTests.swift  PiqleyPluginSDKTests.swift  (+9 more)
templates/python/: piqley-build-manifest.json  pyproject.toml
templates/python/src/__PLUGIN_NAME__/: main.py
(+39 files in other folders)
