[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "__PLUGIN_NAME__"
version = "0.1.0"
description = "A piqley plugin"
requires-python = ">=3.10"
dependencies = [
    "piqley-plugin-sdk>=__SDK_VERSION__",
]

[project.scripts]
__PLUGIN_NAME__ = "__PLUGIN_NAME__.main:main"

[tool.setuptools.packages.find]
where = ["src"]
